  * Try sorting out emacsen mess once again (Closes: #481391):
    - depend on emacsen-common;
    - old-prerm will most likely fail spewing emacsen-common error message
      when upgrading from previous version but this is OK. Add a custom
      prerm script which recovers from the problem and notifies the user to
      ignore the error message.

 -- Modestas Vainius <modestas@vainius.eu>  Thu, 16 Oct 2008 11:17:00 +0300

cmake (2.6.2-1) experimental; urgency=low

  * New upstream release.
  * New co-maintainer:
    - add myself to Uploaders.
    - add DM-Upload-Allowed: yes to debian/control.
  * Refresh patches:
    - FindQt4.cmake2.6.diff
    - do-not-use-lib64.diff
  * Add patches from upstream CVS:
    - relative_path_fixes.diff - fixes a couple of major bugs in Makefile
      generation when CMAKE_USE_RELATIVE_PATHS is ON. This brings
      CMAKE_USE_RELATIVE_PATHS=ON to a very usable state.
    - manpage-generation-fixes.diff - fixes a few manual page generation
      issues. This resolves all lintian warnings and info tags related
      to the cmake manual pages.
  * Bump Standards-Version to 3.8.0:
    - add README.source which directs the reader to quilt README.source.
  * Use dh_lintian:
    - rename cmake.lintian to cmake.lintian-overrides;
    - bump debhelper compat level to 6;
    - build depend on debhelper (>= 6.0.7~).
  * Fix path in the lintian override so it is effective again.
  * Make cmake.menu conform to the current Debian Menu System standard.
  * Drop unused old manual pages from debian/. They are provided by upstream
    now.
  * Add debian/watch.

 -- Modestas Vainius <modestas@vainius.eu>  Mon, 13 Oct 2008 19:24:49 +0300

cmake (2.6.0-5) unstable; urgency=medium

  * Fix build-deps: libncursesw5-dev doesn't work, just use the non wide one.
    This will build ccmake again (Closes: #481392).

 -- Pierre Habouzit <madcoder@debian.org>  Tue, 29 Jul 2008 11:05:17 +0200

cmake (2.6.0-4) unstable; urgency=low
