@@ -13,8 +13,11 @@ cmake (2.6.2-2~pre1) UNRELEASED; urgency=low
       when upgrading from previous version but this is OK. Add a custom
       prerm script which recovers from the problem and notifies the user to
       ignore the error message.
+  * Rewrite cmake cache initialization code. Pass initial cmake flags via
+    file (--init= argument to the bootstrap script).
+  * Make build verbose again.
 
- -- Modestas Vainius <modestas@vainius.eu>  Thu, 16 Oct 2008 11:17:00 +0300
+ -- Modestas Vainius <modestas@vainius.eu>  Thu, 16 Oct 2008 20:12:16 +0300
 
 cmake (2.6.2-1) experimental; urgency=low
 
